unvanquished (0.3.0-2) unstable; urgency=low

  * Enable fs_libpath and use it.
    This means that the pak?.pk3 symlinks can be dropped, but also means
    that the downloaded files have to be moved.
    *** NOTE: downgrades are NOT supported!

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Mon, 02 Apr 2012 21:23:10 +0100

unvanquished (0.3.0-1) unstable; urgency=low

  * Release of alpha 2.
  * Build-depend on nettle-dev & libspeexdsp-dev.
  * Update the menu icon.
  * Fix the launcher scripts where the arch name doesn't match the CPU name.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Sun, 01 Apr 2012 19:56:35 +0100

unvanquished (0.2.5+git7270e68-4) unstable; urgency=low

  * Build-depend on libpng-dev | libpng12-dev.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Sat, 24 Mar 2012 23:34:23 +0000

unvanquished (0.2.5+git7270e68-4) unstable; urgency=low

  * Work around lack of jpeg_mem_info() in libjpeg62.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Tue, 20 Mar 2012 21:17:09 +0000

unvanquished (0.2.5+git7270e68-3) unstable; urgency=low

  * Menu file, desktop file & icons.
  * Add unvanquished-dbg (debug info).
  * Dropped all resource files in favour of the pak files.
  * Tweaked the download script a little for clarity.
  * Fixed building on squeeze/i386.
  * unvanquished: should depend on curl (for the download script).

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Mon, 19 Mar 2012 18:24:16 +0000

unvanquished (0.2.5+git7270e68-2) unstable; urgency=low

  * Move unvanquished-download-paks.sh to /usr/sbin.
  * Inform the user (in a simple, echo-ey way) if the download fails.
  * Set single-patch format.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Wed, 14 Mar 2012 23:10:48 +0000

unvanquished (0.2.5+git7270e68-1) unstable; urgency=low

  * Initial packaging.
    - Based on commit 7270e680c2700fa6dbd882adf4912d2052af9830.
  * Deps on ‘old’ cmake are intended for Debian squeeze to handle missing